<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_category"/>
    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCategory"/>
    <EditText
        android:id="@+id/editTextQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerCategory"
        android:hint="@string/edit_text_quantity"
        android:inputType="number"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/textViewDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextQuantity"
        android:text="@string/text_view_difficulty"/>
    <Spinner
        android:id="@+id/spinnerDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDifficulty" />
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_start"
        android:onClick="startQuiz"/>
</RelativeLayout>
